--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "json": "^11.0.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "keywords": [],
