Revert "J21dm 20new"

--- a/package.json
+++ b/package.json
@@ -16,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/softwareiscool/instock-sprint/issues"
   },
-  "homepage": "https://github.com/softwareiscool/instock-sprint#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "homepage": "https://github.com/softwareiscool/instock-sprint#readme"
 }
